--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -7,21 +7,21 @@
     overflow: hidden;            
 }
 .page{
-    font-size: 72px;
+    /*font-size: 72px;
     line-height: 200px;
-    text-align: center;
+    text-align: center;*/
 }
 .page1{
-    background: red;
+    background-color: #116ad9;
 }
 .page2{
-    background: yellow;
+    background-color: #FFF;
 }
 .page3{
-    background: maroon;
+    background-color: #e2ecf8;
 }
 .page4{
-    background: green;
+    background-color: #c8daf4;
 }
 
 /* 箭头 */
@@ -122,6 +122,69 @@
         transform: rotate(-90deg);
     }
 }
+
+/*样式*/
+.header{
+    margin-top:0.2rem;
+    text-align:center;
+}
+.logo{
+    width: 2.56rem;
+    height: 0.96rem;
+    display: inline-block;
+}
+
+.room-pig{
+    display:inline-block;
+    width:6rem;
+    height: 8.6rem;
+}
+.text-center{
+    text-align:center;
+}
+.first-img{
+    margin-top:0.38rem;
+}
+.page1{
+    color: #fff;
+}
+.first-name{
+    font-size: 0.6rem;
+}
+.first-Ename{
+    font-size: 0.6rem;
+    font-weight: bold;
+}
+.first-tit{
+    font-size:0.66rem;
+    margin-top:0.3rem;
+}
+.btn{
+    padding: 0.2rem 0.4rem 0.3rem;
+    border-radius: 5px;
+    background-color: #000;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    margin-top:0.3rem;
+    transition: 1s;
+    text-decoration: none;
+    font-size:0.6rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
