--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -171,6 +171,47 @@
     text-decoration: none;
     font-size:0.6rem;
 }
+.page2{
+    padding: 0.2rem 0.2rem 0;
+}
+.second-img{
+    width:100%;
+    height: 5.8rem;
+    position:relative;
+    margin-bottom: 0.2rem;
+}
+.second-img img{
+    width:100%;
+    height: 100%;
+    position:absolute;
+    left: 0;
+    top: 0;
+}   
+.second{
+    text-align:right;
+    position:absolute;
+    left: 0;
+    top: 3.6rem;
+    width:100%;
+    color: #fff;
+    padding-right: 0.4rem;
+}
+.second h2{
+    font-size:0.4rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.second .times{
+    font-size:0.30rem;
+}
+.second .details{
+    font-size:0.4rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 
 
 
