--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -211,10 +211,36 @@
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-
-
-
-
+.page3{
+    padding:0.4rem 1rem;
+}
+.page3 .img-box{
+    width:4.8rem;
+    height: 6.6rem;
+    margin:0.3rem auto 0;
+}
+.page3 .img-box img{
+    display:inline-block;
+    width:100%;
+    height: 100%;
+}
+.page3 .tit{
+    font-size:0.6rem;
+    color:#268AFF;
+    font-weight: bold;
+    text-align:center;
+    margin-top:0.3rem;
+}
+.page3 .title{
+    font-size:0.6rem;
+    color:#000;
+    margin-top:0.4rem;
+}
+.page3 p{
+    font-size:0.4rem;
+    margin-top:0.5rem;
+    line-height:0.8rem;
+}
 
 
 
