--- a/moshroom-home-mobile/css/base.css
+++ b/moshroom-home-mobile/css/base.css
@@ -30,7 +30,7 @@ body,html {
     float: right;
 }
 img{
-    display: block;
+    display: inline-block;
     border: 0;
 }
 span, a, img, input, button {
