--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -211,37 +211,44 @@
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.page3{
+.item{
     padding:0.4rem 1rem;
 }
-.page3 .img-box{
+.item .img-box{
     width:4.8rem;
     height: 6.6rem;
     margin:0.3rem auto 0;
 }
-.page3 .img-box img{
+.item .img-box img{
     display:inline-block;
     width:100%;
     height: 100%;
 }
-.page3 .tit{
+.item .tit{
     font-size:0.6rem;
     color:#268AFF;
     font-weight: bold;
     text-align:center;
     margin-top:0.3rem;
 }
-.page3 .title{
+.item .title{
     font-size:0.6rem;
     color:#000;
     margin-top:0.4rem;
 }
-.page3 p{
+.item p{
     font-size:0.4rem;
     margin-top:0.5rem;
     line-height:0.8rem;
 }
-
+.item .four-img{
+    width:100%;
+    height: 5rem;
+}
+.item .four-img img{
+    width:100%;
+    height: 100%;
+}
 
 
 
