--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -191,7 +191,7 @@
     text-align:right;
     position:absolute;
     left: 0;
-    top: 3.6rem;
+    bottom: 0.4rem;
     width:100%;
     color: #fff;
     padding-right: 0.4rem;
@@ -249,10 +249,19 @@
     width:100%;
     height: 100%;
 }
-
-
-
-
+.pay-img{
+    width:4rem;
+    height: 5rem;
+    margin:0.3rem auto 0;
+}
+.pay-img img{
+    width:100%;
+    height: 100%;
+}
+.six{
+    margin-top:1rem;
+    margin-bottom: 0.5rem;
+}
 
 
 
