--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -11,7 +11,7 @@
     line-height: 200px;
     text-align: center;*/
 }
-.page1{
+.page1,.page7{
     background-color: #116ad9;
 }
 .page2{
@@ -262,11 +262,27 @@
     margin-top:1rem;
     margin-bottom: 0.5rem;
 }
-
-
-
-
-
+.contact{
+    margin-top:-0.3rem;
+}
+.icon-top{
+    margin-top: 3rem
+}
+.page7{
+    color: #fff;
+}
+.page7 .phone{
+    margin-top: 1rem;
+    font-size:0.6rem;
+}
+.page7 .word-times{
+    margin-top: 0.4rem;
+    font-size:0.3rem;
+}
+.page7 .number{
+    font-size:0.33rem;
+    margin-top: 1rem;
+}
 
 
 
