--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -271,19 +271,26 @@
 .page7{
     color: #fff;
 }
+.page7 img{
+    width:3rem;
+    height: 0.8rem;
+}
 .page7 .phone{
     margin-top: 1rem;
     font-size:0.6rem;
 }
 .page7 .word-times{
     margin-top: 0.4rem;
-    font-size:0.3rem;
+    font-size:0.5rem;
 }
 .page7 .number{
-    font-size:0.33rem;
+    font-size:0.5rem;
     margin-top: 1rem;
 }
-
+.page7 .num2{
+    font-size:0.5rem;
+    margin-top: 0.3rem;
+} 
 
 
 
