--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -332,7 +332,7 @@
     width:100%;
     height: 100%;
     background-color: #000;
-    z-index: 111;
+    z-index: 111111111;
 }
 .navbar-nav{
     position:absolute;
@@ -352,7 +352,7 @@
     right: 20px;
     top: 10px;
     color:#fff;
-    font-size:30px;
+    font-size:40px;
     transition: All 0.4s ease-in-out;
 }
 .closed-btn:hover{
