--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -17,10 +17,10 @@
 .page2{
     background-color: #FFF;
 }
-.page3{
+.page3,.page5{
     background-color: #e2ecf8;
 }
-.page4{
+.page4,.page6{
     background-color: #c8daf4;
 }
 
