--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -359,3 +359,23 @@
 .closed-btn:hover{
     transform: rotateZ(360deg);
 }
+/*合作*/
+.item{
+    position:fixed;
+    margin-left: 0.6rem;
+    margin-right:0.6rem;
+}
+.form-control-text {
+    width: 100%;
+    padding: 0.4rem 0 0.2rem;
+    border: none;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
+
+
