--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -162,7 +162,7 @@
 .btn{
     padding: 0.2rem 0.4rem 0.3rem;
     border-radius: 5px;
-    background-color: #000;
+    background-color: #116ad9;
     display: inline-block;
     text-align: center;
     color: #fff;
@@ -374,10 +374,42 @@
     border: none;
     border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
-
-
-
-
+.contact-box{
+    position:relative;
+}
+.border-top{
+    border-bottom: 2px solid #F0F0F0;
+}
+.border-act {
+    width: 40%;
+    height: 3px;
+    background-color: #006aff;
+}
+.e-words {
+    position: absolute;
+    left: 0.4rem;
+    top: 0.4rem;
+    color: #F0F0F0;
+    font-weight: bold;
+    font-size: 0.62rem;
+    font-family: "DINAlternate";
+}
+.from-tit {
+    font-size: 0.35rem;
+    color: #000;
+    position: relative;
+    z-index: 1;
+    margin-bottom: 0;
+    margin-top: 0.3rem;
+    margin-top: 0.45rem;
+    font-weight: bold;
+}
+.cooper-con {
+    font-size: 0.2rem;
+    color: #000;
+    font-weight: bold;
+    padding-bottom: 0.3rem;
+}
 
 
 
