--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -127,6 +127,10 @@
 .header{
     margin-top:0.2rem;
     text-align:center;
+    position:absolute;
+    left: 50%;
+    top: 0;
+    margin-left: -1.28rem;
 }
 .logo{
     width: 2.56rem;
@@ -418,6 +422,28 @@
     padding-bottom: 0.3rem;
     text-align: left;
 }
+
+.display-flex{
+    width:100%;
+    height: 100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+.flex-con{
+    /*width:100%;
+    height: 100%;*/
+}
+.btn-bg{
+    background:#000;
+}
+.energy-img{
+    width: 7.2rem;
+    height: 5rem;
+}
+
+
+
 
 
 
