--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -127,7 +127,7 @@
 .header{
     margin-top:0.2rem;
     text-align:center;
-    position:absolute;
+    position:fixed;
     left: 50%;
     top: 0;
     margin-left: -1.28rem;
@@ -276,8 +276,8 @@
     color: #fff;
 }
 .footer-con img{
-    width:3rem;
-    height: 0.8rem;
+    width:4rem;
+    margin-bottom: 0.4rem;
 }
 .footer-con .phone{
     margin-top: 1rem;
@@ -298,7 +298,7 @@
 } 
 /*导航*/
 .nav{
-    position:absolute;
+    position:fixed;
     right:0px;
     top: 0px;
 }
@@ -445,8 +445,33 @@
     height: 14rem;
 }
 
-
-
+.about-us{
+    padding:0.6rem;
+    color: #fff;
+}
+.img-banner{
+    width:100%;
+    height: 4rem;
+    border-radius: 8px;
+}
+.about-us h2{
+    font-size:0.6rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+p{
+    text-indent: 2em;
+    font-size: 0.45rem;
+    line-height: 0.8rem;
+}
+.header-con{
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 1.6rem;
+    width: 100%;
+    background-color: #116ad9; 
+}
 
 
 
