--- a/moshroom-home-mobile/css/global.css
+++ b/moshroom-home-mobile/css/global.css
@@ -332,7 +332,7 @@
 }
 .nav-box{
     display:none;
-    position:absolute;
+    position:fixed;
     left: 0;
     top: 0;
     width:100%;
@@ -380,7 +380,7 @@
 }
 .form-control-text {
     width: 100%;
-    padding: 0.4rem 0 0.2rem;
+    padding: 0.3rem 0 0.2rem;
     border: none;
     border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
@@ -388,7 +388,7 @@
     position:relative;
     margin-left: 0.6rem;
     margin-right: 0.6rem;
-    padding: 1rem;
+    padding:0.6rem 1rem;
     background: #fff;
     border-radius: 10px;
 }
@@ -403,7 +403,7 @@
 .e-words {
     position: absolute;
     left: 1rem;
-    top: 1.1rem;
+    top: 0.5rem;
     color: #F0F0F0;
     font-weight: bold;
     font-size: 1.4rem;
